ec2 hot fix and css overflow change

--- a/client/styles/sidebar.css
+++ b/client/styles/sidebar.css
@@ -27,6 +27,5 @@
 }
 
 #stage{
-  overflow:hidden;
   min-height:300px;
 }
